--- a/BMI3/Base.lproj/Main.storyboard
+++ b/BMI3/Base.lproj/Main.storyboard
@@ -165,6 +165,12 @@
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="AQ7-ax-k8A"/>
                                         </connections>
                                     </textField>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PbI-yy-dTk">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <items>
+                                            <barButtonItem title="About" id="TNe-tP-zi1"/>
+                                        </items>
+                                    </toolbar>
                                 </subviews>
                                 <color key="backgroundColor" red="0.19007825739935036" green="1" blue="0.46114741473699028" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -173,6 +179,7 @@
                                     <constraint firstItem="EVb-7K-87x" firstAttribute="width" secondItem="yDE-At-OFP" secondAttribute="width" id="1Oh-OZ-XtF"/>
                                     <constraint firstItem="pKb-Aw-bRR" firstAttribute="top" secondItem="2bP-BX-W2F" secondAttribute="top" constant="26" id="1bi-hN-lFN"/>
                                     <constraint firstItem="gF8-A5-Kqk" firstAttribute="bottom" secondItem="s1T-Xm-w3e" secondAttribute="bottom" id="5cN-Nq-yIv"/>
+                                    <constraint firstItem="PbI-yy-dTk" firstAttribute="leading" secondItem="2bP-BX-W2F" secondAttribute="leading" id="7Xs-At-B7q"/>
                                     <constraint firstItem="gF8-A5-Kqk" firstAttribute="leading" secondItem="pKb-Aw-bRR" secondAttribute="trailing" constant="36" id="Big-sT-a0t"/>
                                     <constraint firstItem="s1T-Xm-w3e" firstAttribute="centerX" secondItem="pKb-Aw-bRR" secondAttribute="centerX" id="HDR-Ah-xaE"/>
                                     <constraint firstItem="WvH-6a-N8B" firstAttribute="leading" secondItem="u4g-F3-IyX" secondAttribute="leading" id="IbD-xP-YKO"/>
@@ -182,6 +189,7 @@
                                     <constraint firstItem="pKb-Aw-bRR" firstAttribute="centerX" secondItem="2bP-BX-W2F" secondAttribute="centerX" id="PqM-Tg-iTN"/>
                                     <constraint firstItem="WgM-xn-Q5l" firstAttribute="centerY" secondItem="2bP-BX-W2F" secondAttribute="centerY" id="PxD-CX-BV0"/>
                                     <constraint firstItem="9bH-Xv-i7r" firstAttribute="centerX" secondItem="WgM-xn-Q5l" secondAttribute="centerX" id="Q9Y-T5-fMc"/>
+                                    <constraint firstAttribute="trailing" secondItem="PbI-yy-dTk" secondAttribute="trailing" id="SXW-Ld-czf"/>
                                     <constraint firstItem="pKb-Aw-bRR" firstAttribute="leading" secondItem="u4g-F3-IyX" secondAttribute="trailing" constant="50" id="Snj-Tq-hBY"/>
                                     <constraint firstItem="9bH-Xv-i7r" firstAttribute="width" secondItem="WgM-xn-Q5l" secondAttribute="width" id="Tv9-b0-grV"/>
                                     <constraint firstItem="WvH-6a-N8B" firstAttribute="centerY" secondItem="s1T-Xm-w3e" secondAttribute="centerY" id="Uv6-QG-QC4"/>
@@ -195,6 +203,7 @@
                                     <constraint firstItem="s1T-Xm-w3e" firstAttribute="width" secondItem="pKb-Aw-bRR" secondAttribute="width" id="oHU-xo-ZYe"/>
                                     <constraint firstItem="gF8-A5-Kqk" firstAttribute="centerY" secondItem="5yS-YV-IjZ" secondAttribute="centerY" id="qVu-CA-9Im"/>
                                     <constraint firstItem="EVb-7K-87x" firstAttribute="centerX" secondItem="yDE-At-OFP" secondAttribute="centerX" id="vcB-2V-lwc"/>
+                                    <constraint firstAttribute="bottom" secondItem="PbI-yy-dTk" secondAttribute="bottom" id="yYK-Wx-Bd8"/>
                                     <constraint firstItem="WgM-xn-Q5l" firstAttribute="leading" secondItem="2bP-BX-W2F" secondAttribute="leading" constant="43" id="ylX-Fj-yvS"/>
                                 </constraints>
                                 <variation key="default">
@@ -209,6 +218,7 @@
                                         <exclude reference="gF8-A5-Kqk"/>
                                         <exclude reference="pKb-Aw-bRR"/>
                                         <exclude reference="s1T-Xm-w3e"/>
+                                        <exclude reference="PbI-yy-dTk"/>
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="0cA-Qi-gXg"/>
@@ -225,20 +235,23 @@
                                         <exclude reference="ewC-Ql-WOE"/>
                                         <exclude reference="ylX-Fj-yvS"/>
                                         <exclude reference="hYp-6a-HHt"/>
+                                        <exclude reference="lJ6-iv-qbR"/>
+                                        <exclude reference="IbD-xP-YKO"/>
+                                        <exclude reference="Uv6-QG-QC4"/>
                                         <exclude reference="1bi-hN-lFN"/>
                                         <exclude reference="PqM-Tg-iTN"/>
                                         <exclude reference="Snj-Tq-hBY"/>
                                         <exclude reference="HDR-Ah-xaE"/>
                                         <exclude reference="Lwe-9v-Mwc"/>
                                         <exclude reference="oHU-xo-ZYe"/>
-                                        <exclude reference="IbD-xP-YKO"/>
-                                        <exclude reference="Uv6-QG-QC4"/>
                                         <exclude reference="5cN-Nq-yIv"/>
                                         <exclude reference="Big-sT-a0t"/>
                                         <exclude reference="WDa-1H-Hdt"/>
                                         <exclude reference="nep-th-bs3"/>
                                         <exclude reference="qVu-CA-9Im"/>
-                                        <exclude reference="lJ6-iv-qbR"/>
+                                        <exclude reference="7Xs-At-B7q"/>
+                                        <exclude reference="SXW-Ld-czf"/>
+                                        <exclude reference="yYK-Wx-Bd8"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -248,20 +261,24 @@
                                         <include reference="gF8-A5-Kqk"/>
                                         <include reference="pKb-Aw-bRR"/>
                                         <include reference="s1T-Xm-w3e"/>
+                                        <include reference="PbI-yy-dTk"/>
                                     </mask>
                                     <mask key="constraints">
+                                        <include reference="lJ6-iv-qbR"/>
+                                        <include reference="IbD-xP-YKO"/>
+                                        <include reference="Uv6-QG-QC4"/>
                                         <include reference="1bi-hN-lFN"/>
                                         <include reference="PqM-Tg-iTN"/>
                                         <include reference="Snj-Tq-hBY"/>
                                         <include reference="HDR-Ah-xaE"/>
                                         <include reference="Lwe-9v-Mwc"/>
                                         <include reference="oHU-xo-ZYe"/>
-                                        <include reference="IbD-xP-YKO"/>
-                                        <include reference="Uv6-QG-QC4"/>
                                         <include reference="5cN-Nq-yIv"/>
                                         <include reference="Big-sT-a0t"/>
                                         <include reference="nep-th-bs3"/>
-                                        <include reference="lJ6-iv-qbR"/>
+                                        <include reference="7Xs-At-B7q"/>
+                                        <include reference="SXW-Ld-czf"/>
+                                        <include reference="yYK-Wx-Bd8"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=regular">
@@ -272,6 +289,7 @@
                                         <include reference="yDE-At-OFP"/>
                                         <include reference="EVb-7K-87x"/>
                                         <include reference="gF8-A5-Kqk"/>
+                                        <include reference="PbI-yy-dTk"/>
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="0cA-Qi-gXg"/>
@@ -290,6 +308,9 @@
                                         <include reference="hYp-6a-HHt"/>
                                         <include reference="WDa-1H-Hdt"/>
                                         <include reference="qVu-CA-9Im"/>
+                                        <include reference="7Xs-At-B7q"/>
+                                        <include reference="SXW-Ld-czf"/>
+                                        <include reference="yYK-Wx-Bd8"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -374,7 +395,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="332.25" y="355.5"/>
+            <point key="canvasLocation" x="261" y="300"/>
         </scene>
     </scenes>
     <resources>
