--- a/BMI3/Base.lproj/Main.storyboard
+++ b/BMI3/Base.lproj/Main.storyboard
@@ -168,7 +168,11 @@
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PbI-yy-dTk">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <items>
-                                            <barButtonItem title="About" id="TNe-tP-zi1"/>
+                                            <barButtonItem title="About" id="TNe-tP-zi1">
+                                                <connections>
+                                                    <segue destination="LzE-uR-yJz" kind="presentation" id="Hds-ve-mhF"/>
+                                                </connections>
+                                            </barButtonItem>
                                         </items>
                                     </toolbar>
                                 </subviews>
@@ -397,9 +401,98 @@
             </objects>
             <point key="canvasLocation" x="261" y="300"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="lMk-N1-9Lq">
+            <objects>
+                <viewController id="LzE-uR-yJz" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1fP-17-xpz"/>
+                        <viewControllerLayoutGuide type="bottom" id="FrE-5H-1tY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TgY-ID-2em">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Sy-GQ-pPJ">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Dismiss"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="158" y="750" width="54" height="30"/>
+                                </variation>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5gN-C3-fWS">
+                                <rect key="frame" x="34" y="209" width="332" height="346"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS Development in Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9LJ-2h-cn6">
+                                        <rect key="frame" x="54" y="20" width="194" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                            <rect key="frame" x="49" y="0.0" width="194" height="21"/>
+                                        </variation>
+                                    </label>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Square" translatesAutoresizingMaskIntoConstraints="NO" id="mTv-Cx-XZA">
+                                        <rect key="frame" x="20" y="56" width="292" height="270"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="mTv-Cx-XZA" secondAttribute="height" multiplier="146:135" id="nmW-EA-nOa"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="nmW-EA-nOa"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                            <rect key="frame" x="0.0" y="41" width="292" height="270"/>
+                                            <mask key="constraints">
+                                                <include reference="nmW-EA-nOa"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                </subviews>
+                                <variation key="heightClass=regular-widthClass=compact" alignment="center" axis="vertical" misplaced="YES">
+                                    <rect key="frame" x="54" y="155" width="292" height="311"/>
+                                </variation>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5gN-C3-fWS" firstAttribute="centerX" secondItem="TgY-ID-2em" secondAttribute="centerX" id="ZIU-a6-TEF"/>
+                            <constraint firstItem="FrE-5H-1tY" firstAttribute="top" secondItem="0Sy-GQ-pPJ" secondAttribute="bottom" constant="20" id="aId-Lq-qQb"/>
+                            <constraint firstItem="0Sy-GQ-pPJ" firstAttribute="centerX" secondItem="TgY-ID-2em" secondAttribute="centerX" id="flO-rd-Mly"/>
+                            <constraint firstItem="5gN-C3-fWS" firstAttribute="centerY" secondItem="TgY-ID-2em" secondAttribute="centerY" id="mTI-Ve-Uns"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="0Sy-GQ-pPJ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="ZIU-a6-TEF"/>
+                                <exclude reference="mTI-Ve-Uns"/>
+                                <exclude reference="flO-rd-Mly"/>
+                                <exclude reference="aId-Lq-qQb"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="0Sy-GQ-pPJ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="ZIU-a6-TEF"/>
+                                <include reference="mTI-Ve-Uns"/>
+                                <include reference="flO-rd-Mly"/>
+                                <include reference="aId-Lq-qQb"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZN4-Ly-WsS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="261" y="984.75"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Banner" width="676" height="169"/>
+        <image name="Square" width="292" height="270"/>
         <image name="heart" width="213" height="200"/>
         <image name="scale" width="213" height="188"/>
         <image name="tape" width="213" height="189"/>
